modified package.json to support npm and made changes to event 'error', renamed the event to 'err' as nodejs throwing error in case 'error' event is undefined :o

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name" : "node.isbn.net.in",
-    "version" : "0.1",
+    "name" : "node.isbn",
+    "version" : "0.1.0",
     "author" : "kailashnath (kailashnathreddy@ymail.com)",
     "description" : "A simple nodejs interface to isbn.net.in",
     "homepage" : "https://github.com/geek-cetas/node.isbn.net.in",
